removing repositories from controllers