@@ -1,31 +1,28 @@
 package gr.hua.dit.fittrack.web.rest;
 
+
 import gr.hua.dit.fittrack.core.model.Appointment;
-import gr.hua.dit.fittrack.core.model.Person;
 import gr.hua.dit.fittrack.core.port.impl.dto.AppointmentDTO;
+import gr.hua.dit.fittrack.core.security.CurrentUserProvider;
 import gr.hua.dit.fittrack.core.service.AppointmentService;
 import gr.hua.dit.fittrack.core.service.model.CreateAppointmentRequest;
-import gr.hua.dit.fittrack.core.repository.PersonRepository;
-import gr.hua.dit.fittrack.core.security.CurrentUserProvider;
 import jakarta.validation.Valid;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/appointments")
 public class TrainerAppointmentController {
 
     private final AppointmentService appointmentService;
-    private final PersonRepository personRepository;
     private final CurrentUserProvider currentUserProvider;
 
-    public TrainerAppointmentController(AppointmentService appointmentService,
-                                        PersonRepository personRepository,
-                                        CurrentUserProvider currentUserProvider) {
+    public TrainerAppointmentController(
+            AppointmentService appointmentService,
+            CurrentUserProvider currentUserProvider
+    ) {
         this.appointmentService = appointmentService;
-        this.personRepository = personRepository;
         this.currentUserProvider = currentUserProvider;
     }
 
@@ -33,17 +30,14 @@ public class TrainerAppointmentController {
     // Create Appointment (Customer)
     // ---------------------------
     @PostMapping
-    public AppointmentDTO createAppointment(@RequestBody @Valid CreateAppointmentRequest request) {
+    public AppointmentDTO createAppointment(
+            @RequestBody @Valid CreateAppointmentRequest request
+    ) {
         long customerId = currentUserProvider.requireCustomerId();
-        Person customer = personRepository.findById(customerId)
-                .orElseThrow(() -> new IllegalArgumentException("Customer not found"));
-
-        Person trainer = personRepository.findById(request.trainerId())
-                .orElseThrow(() -> new IllegalArgumentException("Trainer not found"));
 
         Appointment appointment = appointmentService.createAppointment(
-                customer,
-                trainer,
+                customerId,
+                request.trainerId(),
                 request.startDateTime(),
                 request.endDateTime()
         );
@@ -55,65 +49,39 @@ public class TrainerAppointmentController {
     // Approve Appointment (Trainer)
     // ---------------------------
     @PostMapping("/{id}/approve")
-    public AppointmentDTO approveAppointment(@PathVariable Long id) {
+    public void approveAppointment(@PathVariable Long id) {
         long trainerId = currentUserProvider.requireTrainerId();
-        Person trainer = personRepository.findById(trainerId)
-                .orElseThrow(() -> new IllegalArgumentException("Trainer not found"));
-
-        Appointment appointment = appointmentService.getAppointmentById(id);
-        Appointment approved = appointmentService.approveAppointment(appointment, trainer);
-
-        return toDTO(approved);
+        appointmentService.approveAppointment(id, trainerId);
     }
 
     // ---------------------------
     // Reject Appointment (Trainer)
     // ---------------------------
     @PostMapping("/{id}/reject")
-    public AppointmentDTO rejectAppointment(@PathVariable Long id) {
-        long trainerId = currentUserProvider.requireTrainerId();
-        Person trainer = personRepository.findById(trainerId)
-                .orElseThrow(() -> new IllegalArgumentException("Trainer not found"));
-
-        Appointment appointment = appointmentService.getAppointmentById(id);
-
-        // Έλεγχος ιδιοκτησίας
-        if (!appointment.getTrainer().equals(trainer)) {
-            throw new IllegalStateException("Trainer does not own this appointment");
-        }
-
-        Appointment rejected = appointmentService.rejectAppointment(appointment);
-        return toDTO(rejected);
+    public void rejectAppointment(@PathVariable Long id) {
+        appointmentService.rejectAppointment(id);
     }
 
     // ---------------------------
     // Cancel Appointment (Customer)
     // ---------------------------
     @PostMapping("/{id}/cancel")
-    public AppointmentDTO cancelAppointment(@PathVariable Long id) {
+    public void cancelAppointment(@PathVariable Long id) {
         long customerId = currentUserProvider.requireCustomerId();
-        Person customer = personRepository.findById(customerId)
-                .orElseThrow(() -> new IllegalArgumentException("Customer not found"));
-
-        Appointment appointment = appointmentService.getAppointmentById(id);
-        Appointment cancelled = appointmentService.cancelByCustomer(appointment, customer);
-
-        return toDTO(cancelled);
+        appointmentService.cancelAppointment(id, customerId);
     }
 
-    // ---------------------------
+    //---------------------------
     // Get Appointments for Customer
     // ---------------------------
     @GetMapping("/my")
     public List<AppointmentDTO> getMyAppointments() {
         long customerId = currentUserProvider.requireCustomerId();
-        Person customer = personRepository.findById(customerId)
-                .orElseThrow(() -> new IllegalArgumentException("Customer not found"));
 
-        return appointmentService.getAppointmentsForCustomer(customer)
+        return appointmentService.getAppointmentsForCustomer(customerId)
                 .stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // ---------------------------
@@ -122,18 +90,13 @@ public class TrainerAppointmentController {
     @GetMapping("/trainer")
     public List<AppointmentDTO> getTrainerAppointments() {
         long trainerId = currentUserProvider.requireTrainerId();
-        Person trainer = personRepository.findById(trainerId)
-                .orElseThrow(() -> new IllegalArgumentException("Trainer not found"));
 
-        return appointmentService.getAppointmentsForTrainer(trainer)
+        return appointmentService.getAppointmentsForTrainer(trainerId)
                 .stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // ---------------------------
-    // Helper: Convert entity to DTO
-    // ---------------------------
     private AppointmentDTO toDTO(Appointment appointment) {
         return new AppointmentDTO(
                 appointment.getId(),
@@ -141,10 +104,8 @@ public class TrainerAppointmentController {
                 appointment.getCustomer().getId(),
                 appointment.getStartDateTime(),
                 appointment.getEndDateTime(),
-                appointment.getStatus().name() // <-- κάνουμε .name() εδώ
+                appointment.getStatus().name()
         );
     }
-
 }
-
 
